--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,21 +1,20 @@
 @import 'utils/variables';
 @import 'components/type';
 
-.rond{
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: black;
+.title{
+  color: #88f;
+  font-size: 140px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 200px;
-  left: 200px;
 
-  .carre{
-    width: 20px;
-    height: 20px;
-    background-color: white;
+  &--line{
+    display: block;
+  }
+
+  &--bold{
+    color: #8FF;
+    font-weight: bold;
   }
 }
