Avec du noise en fond et le fond du logo transparent

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,6 +3,10 @@
 
 body{
   background-color: black;
+  overflow: hidden;
+  background-image: url('../assets/images/noise.png');
+  background-size: 400px;
+  background-repeat: repeat;
 }
 
 .title{
